Add support for multiple mongodb server uris (#205)
This commit adds the ability to use multiple MongoDB databases.
It's worth noting that we will spawn a _single_ MongoDB container,
and that the name of the replica set is going to be set to the
database name in your Micronaut configuration.

Closes #142